--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,7 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.1
   share_plus: ^12.0.0
-  bloc: ^9.0.1
-  flutter_bloc: ^9.1.1
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
